--- a/index.html
+++ b/index.html
@@ -6,22 +6,10 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- Bizzabo Web Agenda Begin -->
-        <div
-            name="bizzabo-web-agenda"
-            data-unique-name="637687"
-            data-internal-website-base-url="https://events.bizzabo.com/637687"
-        ></div>
-        <script type="text/javascript">
-            (function () {
-                var bz = document.createElement('script');
-                bz.type = 'text/javascript';
-                bz.async = true;
-                bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(bz, s);
-            })();
-        </script>
-        <!-- Bizzabo Web Agenda End -->
+        <ul>
+            <li><a href="/"></a>Home</li>
+            <li><a href="/agenda"></a>Agenda</li>
+            <li><a href="/speakers">Speakers</a></li>
+        </ul>
     </body>
 </html>
