--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <ul>
-            <li><a href="/"></a>Home</li>
-            <li><a href="/agenda"></a>Agenda</li>
-            <li><a href="/speakers">Speakers</a></li>
-        </ul>
+        <div>Independent website</div>
+        <iframe src="https://bizzabo.sanvyx.com/agenda"></iframe>
     </body>
 </html>
