--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            iframe {
+                width: 80%;
+                height: 70vh;
+            }
+        </style>
     </head>
     <body>
         <div>Independent website</div>
