--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <style>
-            iframe {
-                width: 80%;
-                height: 70vh;
-            }
-        </style>
     </head>
     <body>
-        <div>Independent website</div>
-        <iframe src="https://bizzabo.sanvyx.com/agenda"></iframe>
+        <!-- Bizzabo Web Agenda Begin -->
+        <div
+            name="bizzabo-web-agenda"
+            data-unique-name="640149"
+            data-internal-website-base-url="https://events.bizzabo.com/640149"
+        ></div>
+        <script type="text/javascript">
+            (function () {
+                var bz = document.createElement('script');
+                bz.type = 'text/javascript';
+                bz.async = true;
+                bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(bz, s);
+            })();
+        </script>
+        <!-- Bizzabo Web Agenda End -->
     </body>
 </html>
