--- a/index.html
+++ b/index.html
@@ -6,22 +6,37 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- Bizzabo Web Agenda Begin -->
-        <div
-            name="bizzabo-web-agenda"
-            data-unique-name="640149"
-            data-internal-website-base-url="https://events.bizzabo.com/640149"
-        ></div>
-        <script type="text/javascript">
-            (function () {
-                var bz = document.createElement('script');
-                bz.type = 'text/javascript';
-                bz.async = true;
-                bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(bz, s);
-            })();
-        </script>
-        <!-- Bizzabo Web Agenda End -->
+        <div style="display:grid;">
+            <h3>Authenticated</h3>
+            <p>Event links</p>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3?eventGroupId=2">Gmail</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3?eventGroupId=2">Outlook</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3?eventGroupId=2">Office365</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3?eventGroupId=2">Yahoo</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=2">ICalendar</a>
+            <br>
+            <p>Session links</p>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3/sessions/2?eventGroupId=2">Gmail</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3/sessions/2?eventGroupId=2">Outlook</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3/sessions/2?eventGroupId=2">Office365</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3/sessions/2?eventGroupId=2">Yahoo</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=2">ICalendar</a>
+            <br>
+            <br>
+            <h3>Unauthenticated</h3>
+            <p>Event links</p>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3?eventGroupId=222">Gmail</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3?eventGroupId=222">Outlook</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3?eventGroupId=222">Office365</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3?eventGroupId=222">Yahoo</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=222">ICalendar</a>
+            <br>
+            <p>Session links</p>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3/sessions/2?eventGroupId=222">Gmail</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3/sessions/2?eventGroupId=222">Outlook</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3/sessions/2?eventGroupId=222">Office365</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3/sessions/2?eventGroupId=222">Yahoo</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=222">ICalendar</a>
+        </div>
     </body>
 </html>
