--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3?eventGroupId=2">Outlook</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3?eventGroupId=2">Office365</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3?eventGroupId=2">Yahoo</a>
-            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=2">ICalendar</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=2" download="event_calendar_auth.ics">ICalendar</a>
             <br>
             <p>Session links</p>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3/sessions/2?eventGroupId=2">Gmail</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3/sessions/2?eventGroupId=2">Outlook</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3/sessions/2?eventGroupId=2">Office365</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3/sessions/2?eventGroupId=2">Yahoo</a>
-            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=2">ICalendar</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=2" download="session_calendar_auth.ics">ICalendar</a>
             <br>
             <br>
             <h3>Unauthenticated</h3>
@@ -29,14 +29,14 @@
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3?eventGroupId=222">Outlook</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3?eventGroupId=222">Office365</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3?eventGroupId=222">Yahoo</a>
-            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=222">ICalendar</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3?eventGroupId=222" download="event_calendar_no_auth.ics">ICalendar</a>
             <br>
             <p>Session links</p>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/GOOGLE/accounts/9/events/3/sessions/2?eventGroupId=222">Gmail</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OUTLOOK_COM/accounts/9/events/3/sessions/2?eventGroupId=222">Outlook</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/OFFICE365/accounts/9/events/3/sessions/2?eventGroupId=222">Office365</a>
             <a href="https://as-events.ext.dev.bizzabo.com/calendars/YAHOO/accounts/9/events/3/sessions/2?eventGroupId=222">Yahoo</a>
-            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=222">ICalendar</a>
+            <a href="https://as-events.ext.dev.bizzabo.com/calendars/ICALENDAR/accounts/9/events/3/sessions/2?eventGroupId=222" download="session_calendar_no_auth.ics">ICalendar</a>
         </div>
     </body>
 </html>
