--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            a {
+                width: fit-content;
+            }
+        </style>
     </head>
     <body>
         <div style="display:grid;">
