--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         </style>
     </head>
     <body>
+        <!-- Bizzabo Web Agenda Begin -->
+<div name="bizzabo-web-agenda" data-unique-name="24" data-internal-website-base-url="https://wl.3rd-party.sanvyx.com"></div>
+<script type="text/javascript">(function() {
+    var bz = document.createElement('script');
+    bz.type = 'text/javascript';
+    bz.async = true;
+    bz.src = 'https://as-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(bz, s);
+})();</script>
+<!-- Bizzabo Web Agenda End -->
         <div style="display:grid;">
             <h3>Authenticated</h3>
             <p>Event links</p>
