--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     s.parentNode.insertBefore(bz, s);
 })();</script>
 <!-- Bizzabo Web Agenda End -->
+
+        <!-- Bizzabo Web Community Begin -->
+<div name="bizzabo-web-community" data-unique-name="24" data-internal-website-base-url="https://wl.3rd-party.sanvyx.com"></div>
+<script type="text/javascript">(function() {
+    var bz = document.createElement('script');
+    bz.type = 'text/javascript';
+    bz.async = true;
+    bz.src = 'https://as-organizer.ext.dev.bizzabo.com/widgets/webcommunity/webcommunity.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(bz, s);
+})();</script>
+<!-- Bizzabo Web Community End -->
         <div style="display:grid;">
             <h3>Authenticated</h3>
             <p>Event links</p>
