--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         </style>
     </head>
     <body>
-        <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="24" data-internal-website-base-url="https://wl.3rd-party.sanvyx.com"></div>
+<!-- Bizzabo Web Community Begin -->
+<div name="bizzabo-web-community" data-unique-name="761726" data-internal-website-base-url="https://events.bizzabo.com/761726"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
     bz.async = true;
-    bz.src = 'https://as-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
+    bz.src = 'https://organizer.bizzabo.com/widgets/webcommunity/webcommunity.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(bz, s);
 })();</script>
-<!-- Bizzabo Web Agenda End -->
+<!-- Bizzabo Web Community End -->
 
         <!-- Bizzabo Web Community Begin -->
 <div name="bizzabo-web-community" data-unique-name="24" data-internal-website-base-url="https://wl.3rd-party.sanvyx.com"></div>
